# yt-dlpmaster

./: .gitignore  README.md  README.ru.md  pyproject.toml
app/: __init__.py  cli.py
app/core/: analyzer.py  ca.py  downloader.py  ffmpeg.py  settings.py
app/i18n/: yt-dlpmaster_en_US.ts  yt-dlpmaster_ru.ts
app/ui/: about_dialog.py  cookies_dialog.py  icon_utils.py  main_window.py  proxy_dialog.py  settings_dialog.py  updater_dialog.py
scripts/: build_translations.sh  update_translations.sh
