[project]
name = "yt-dlpmaster"
version = "0.1.0"
description = "GUI shell for yt-dlp built with Python and PySide6"
readme = "README.md"
requires-python = ">=3.10,<3.15"
dependencies = [
    "PySide6>=6.7",
    "yt-dlp>=2025.1.0",
    "yt-dlp-ejs",
    "certifi>=2024.8.30",
]

[project.scripts]
yt-dlpmaster = "app.cli:main"

[tool.poetry]
packages = [{ include = "app" }]
include = ["app/i18n/*.ts", "app/i18n/*.qm"]

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"
